# src/modules/platform-auth/dto/create-platform-admin.dto.ts
@@ -1,0 +1,23 @@
+import {
+  IsBoolean,
+  IsEmail,
+  IsOptional,
+  IsString,
+  MinLength,
+} from 'class-validator';
+
+export class CreatePlatformAdminDto {
+  @IsEmail()
+  email!: string;
+
+  @IsString()
+  name!: string;
+
+  @IsString()
+  @MinLength(8)
+  password!: string;
+
+  @IsOptional()
+  @IsBoolean()
+  active?: boolean;
+}
